--- a/backend/pubspec.yaml
+++ b/backend/pubspec.yaml
@@ -10,5 +10,12 @@ environment:
 #   path: ^1.8.0
 
 dev_dependencies:
-  lints: ^2.0.0
+  flutterando_analysis: ^0.0.2
   test: ^1.21.0
+dependencies:
+  postgresql2: ^1.0.4
+  redis: ^3.1.0
+  result_dart: ^1.0.5
+  shelf: ^1.4.0
+  shelf_modular: ^2.1.0
+  uno: ^1.1.6
